# ChatViaOpenRouter

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: ChatDock.css  ChatDock.tsx  MainDock.css  MainDock.tsx  V2ray.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  helpers.rs  lib.rs  main.rs  windows.rs
src/DTOs/: ChatCompletion.dto.ts  Conversation.dto.ts  Message.dto.ts  OpenRouterResponse.dto.ts  Shortcuts.dto.ts  StoreStructure.dto.ts  shortcutMission.dto.ts  systemLanguage.dto.ts
src/DTOs/types/: mammoth.d.ts  pptx-parser.d.ts
src/components/: ApiKeyTab.tsx  AttachmentDrop.tsx  BotModal.css  BotModal.tsx  ChatHeader.tsx  ChatSender.tsx  CodeBlockRenderer.css  CodeBlockRenderer.tsx  DockIcon.tsx  HistoryList.tsx  MessageList.tsx  SettingModel.tsx  ShortcutsTab.tsx  UserTab.tsx  loadingAnimate.tsx
src/constants/: defaultLanguage.ts  languageOptions.ts  mime.ts  settings.ts  shortcuts.ts  ui.ts
src/hooks/: useChatInit.ts  useChatListeners.ts  useInitTauriStore.ts  usePersistentRefs.ts  useSenderDragDrop.ts  useTransparentBackground.ts
src/utils/: Chat.ts  clipboard.ts  conversation.ts  files.ts  findConversationIndexByTime.ts  providerToColor.ts  ranker.ts  titleTruncater.ts  xlsxToMarkdown.ts
