[package]
name = "sengine"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sengine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3.31"
dotenvy = "0.15"
tauri-plugin-store = "2"
bytes = "1.10.1"
window-vibrancy = "0.6.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
uiautomation =  { version = "0.22.2", features = ["event", "pattern", "control"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_Accessibility",
  "Win32_System_Ole",
  "Win32_UI_WindowsAndMessaging",
] }
